# FXrays

./: .cirrus.yml  .gitignore  .hgignore  .travis.yml  FXrays.c  FXrays.h  FXraysmodule.c  MANIFEST.in  Makefile  README  README.rst  appveyor.yml  bitbucket-pipelines.yml  meson.build  pyproject.toml  setup.py
.github/workflows/: build.yml
c_src/: FXrays.c  FXrays.h  FXraysmodule.c  Makefile
c_src/tests/: magic5.c  test0.c  test0.py  test1.c  test1.py  test2.c
cython_src/: FXraysmodule.pyx
dev/: build-wheels.sh
python_src/: __init__.py  _test.py  test.py
tests/: magic5.c  magic5.py  test0.c  test1.c  test2.c  test2.py
