[build-system]
requires = ["meson-python", "cython"]
build-backend = "mesonpy"

[project]
name = "FXrays"
version = "1.3.5"
description = "Computes extremal rays with filtering"
readme = "README.rst"
requires-python = ">=3.7"
authors = [
  {name = "Marc Culler", email = "culler@marc-culler.info"},
  {name = "Nathan M. Dunfield", email = "nathan@dunfield.info"},
]
license = {text = "GPLv2+"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: C",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/3-manifolds/FXrays"

[tool.cibuildwheel]
skip = "*-manylinux_i686 *musllinux* pp*"
test-command = "python -m FXrays.test"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"
