[build-system]
requires = ["setuptools>=61", "wheel", "cython"]
build-backend = "setuptools.build_meta"


[project]
name = "FXrays"
dynamic = ["version"]
description = "Computes extremal rays with filtering"
readme = "README.rst"
requires-python = ">=3.7"
authors = [
  {name = "Marc Culler", email = "culler@marc-culler.info"},
  {name = "Nathan M. Dunfield", email = "nathan@dunfield.info"},
]
license = {text = "GPLv2+"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: C",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/3-manifolds/FXrays"

[tool.setuptools.dynamic]
version = {attr = "FXrays.__version__"}

[tool.cibuildwheel]
build = "cp38* cp39* cp310* cp311* cp312* cp313*"
skip = "*musllinux*"
archs = "auto64"
test-command = "python -m knot_floer_homology.test"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"
